# Assay

./: .env.example  .gitignore  README.md  RUNBOOK.md  agent_config.yaml.example  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
armada/: __init__.py  audit.py  engine.py  prompts.py  runner.py  tools.py
armada/agents/: __init__.py  _common.py  konduktor.py  pengulas.py  skaut.py
brand/: cover-prompt.md  deck.html  video-script.md
data/: ORKES-A.json  ORKES-B.json  ORKES-C.json  ORKES-D.json  ORKES-E.json  ORKES-F.json
tests/: test_audit.py  test_engine.py  test_tools.py
