[project]
name = "band-armada"
version = "0.1.0"
description = "Multi-agent investment screening desk on Band — AI directs, code computes, agents cross-audit"
requires-python = ">=3.11"
dependencies = [
    "band-sdk[langgraph]>=0.1.0",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "python-dotenv>=1.0",
    "langchain-anthropic>=1.4.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
demo = [
    "streamlit>=1.58.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["armada"]
